src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Called_Confirmed_Contact_Number__c</fullName>
        <label>Called Confirmed Contact Number</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Additional_Email__c</fullName>
        <description>For sending BD notifications; set via workflow</description>
        <label>Campaign Owner Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Email__c</fullName>
        <description>For sending BD notifications; set via workflow</description>
        <label>Campaign Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>CASE(Campaign.Type ,
            &quot;Partners&quot;, &quot;Partners&quot;, 
            &quot;Internet&quot;, &quot;Internet&quot;, 
            &quot;Lead Source&quot;, &quot;Lead Source&quot;,
            &quot;Rapid Advance Internal Campaign&quot;
)</formula>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_name__c</fullName>
        <label>Campaign name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled_Site_Survey_Due_Date__c</fullName>
        <label>Canceled Site Survey Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Canceled_Site_Survey__c</fullName>
        <label>Canceled Site Survey</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CardType_If_no_explain__c</fullName>
        <label>If no, explain?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Types_Selected_by_UW__c</fullName>
        <formula>if(or( Visa_MC_Discover_Amex__c , Visa_MC_Amex__c ,Visa_MC_Debit_Amex_Discover__c, Visa_MC_Debit_Amex__c,Visa_MC_Debit__c, Visa_MC__c,Visa_MC_Debit_Discover__c,Visa_MC_Discover__c,Visa_MC_Debit_Diners__c ),&quot;Visa,MC&quot;,&quot;&quot;)
&amp; if(or(Visa_MC_Debit_Amex_Discover__c, Visa_MC_Debit_Amex__c, Visa_MC_Debit__c, Visa_MC_Debit_Discover__c, Visa_MC_Debit_Diners__c ),&quot;,Debit&quot;,&quot;&quot;)
&amp; if(or( Visa_MC_Discover_Amex__c ,Visa_MC_Amex__c ,Visa_MC_Debit_Amex_Discover__c, Visa_MC_Debit_Amex__c),&quot;,AMEX&quot;,&quot;&quot;)
&amp; if(or(Visa_MC_Discover_Amex__c ,Visa_MC_Debit_Amex_Discover__c, Visa_MC_Debit_Discover__c,Visa_MC_Discover__c ),&quot;,Discover&quot;,&quot;&quot;)
&amp; if(or(Visa_MC_Debit_Diners__c ),&quot;,Diners&quot;,&quot;&quot;)
&amp; if(Fixed_Amount__c,&quot;Fixed Amount&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Types Selected by UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Logic_for_Reporting__c</fullName>
        <description>The new Channel Logic</description>
        <formula>if ( AND
	(datevalue(CreatedDate)  &gt; date(2014,07,30), 
	(text(LeadSource) = &quot;Referral&quot;), 
	or(	Opportunity_Owner_Name__c = &quot;Ryan Dearborn&quot;,
		Opportunity_Owner_Name__c = &quot;Devin Delany&quot;,
		Opportunity_Owner_Name__c = &quot;Brendan McBride&quot;,
		Opportunity_Owner_Name__c = &quot;Charles Wagner&quot;,
		Opportunity_Owner_Name__c = &quot;Peter Havenstein&quot;,
		Opportunity_Owner_Name__c = &quot;Alexander Perla&quot;,
		Opportunity_Owner_Name__c = &quot;Jason Perkins&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Drayer&quot;,
                Opportunity_Owner_Name__c = &quot;Julio Arjona&quot;,
                Opportunity_Owner_Name__c = &quot;Jarrett McKiney&quot;)),&quot;ISO&quot;,

if ( AND
	(datevalue(CreatedDate)  &gt; date(2014,07,30), 
	(  Campaign.Name    = &quot;Referral&quot;), 
	or(	Opportunity_Owner_Name__c = &quot;Ryan Dearborn&quot;,
		Opportunity_Owner_Name__c = &quot;Devin Delany&quot;,
		Opportunity_Owner_Name__c = &quot;Brendan McBride&quot;,
		Opportunity_Owner_Name__c = &quot;Charles Wagner&quot;,
		Opportunity_Owner_Name__c = &quot;Peter Havenstein&quot;,
		Opportunity_Owner_Name__c = &quot;Alexander Perla&quot;,
		Opportunity_Owner_Name__c = &quot;Jason Perkins&quot;,
                Opportunity_Owner_Name__c = &quot;Luke Drayer&quot;,
                Opportunity_Owner_Name__c = &quot;Julio Arjona&quot;,
                Opportunity_Owner_Name__c = &quot;Jarrett McKiney&quot;)),&quot;ISO&quot;,

if (PrimaryCampaignSource__c   = &quot;*Partner100%PaidRenewals*&quot;,&quot;ISO&quot;,

if (PrimaryCampaignSource__c  = &quot;*Direct100%PaidRenewals*&quot;,&quot;Direct&quot;,

if ( text(LeadSource) = &quot;Partner&quot;,&quot;ISO&quot;,

&quot;Direct&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Logic for Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_offs_in_the_last_3_months__c</fullName>
        <label>Charge offs in the last 3 months</label>
        <picklist>
            <picklistValues>
                <fullName>$1,000 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 to $15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $15,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Account_Paid_Off_Letter_Sent__c</fullName>
        <label>Closed Account Paid Off Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Landlord Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business for sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t pay off current advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed for the season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derogatory Business Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derogatory Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Co does processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Chargeback Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Business Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home based business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistent or Fluctuating Processing History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Time on Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Experience as Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative SIte Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Credit Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Proof of Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough time in business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough V/MC volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender-shift Risk or Too Few Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too few transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Pay Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V/MC Too Much of Overall Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted more than max quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collection_Accounts__c</fullName>
        <label>Collection Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>$1k-$5k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5k-$10k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10k-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k and up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_on_Bank_Statements__c</fullName>
        <label>Comments on Bank Statements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_corp_ID__c</fullName>
        <label>Company corp ID</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_Factors__c</fullName>
        <label>Compensating factors</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;2 yrs with cc processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &gt;= 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business type is Staple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FICO score &gt;600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Company LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No compet inquiries from last 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No competitor UCC’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive MEB in business account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero NSF’S</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <description>Who does the merchant have an advance with now or in the past?</description>
        <label>Competitor Advance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_NAMAA_Tag__c</fullName>
        <label>Completed NAMAA Tag:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConditionalPricingCriteria__c</fullName>
        <formula>if( and(QC_Business_Category_Alert__c = &quot;No Alert&quot;,  QC_SCF_Alert__c = &quot;No Alert&quot;), &quot;Not Relevant&quot;,(

if(and(QC_SCF_Alert__c =&quot;Yes&quot;, ispickval(BA_X2_years_in_business__c, &quot;No&quot;),Amount&gt;75000),&quot;Advance cannot exceed $75,000.  &quot;,&quot;&quot;)

&amp; if(and(or(QC_SCF_Alert__c =&quot;Yes&quot;,QC_Business_Category_Alert__c = &quot;Yes&quot;),ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Estimated_Days_to_Repay__c&gt;189),&quot;Estimated Term cannot exceed 189 days.&quot;,&quot;&quot;)

&amp; if(and(QC_SCF_Alert__c =&quot;Yes&quot;,QC_Business_Category_Alert__c = &quot;Yes&quot;,ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 20),&quot;Percent Payback cannot exceed 20%&quot;,
     if(and(QC_Business_Category_Alert__c  = &quot;Yes&quot;,ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 20),&quot;Percent Payback cannot exceed 20%&quot;,
        if(and(QC_SCF_Alert__c =&quot;Yes&quot;, ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 40),&quot;Percent Payback cannot exceed 40%&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Pricing Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_DBA_Address_against_Google_Maps__c</fullName>
        <label>Confirm DBA/Address against Google Maps:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Activity_Too_Low_Due_Date__c</fullName>
        <label>Confirmed - Activity Too Low Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Add_l_Signer_Mobile_Number__c</fullName>
        <label>Confirmed Add&apos;l Signer Mobile Number</label>
        <picklist>
            <picklistValues>
                <fullName>No Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Under Merchant Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed w/o Merchant name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Add_l_Signer_Phone_Number__c</fullName>
        <label>Confirmed Add&apos;l Signer Phone Number</label>
        <picklist>
            <picklistValues>
                <fullName>No Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Under Merchant Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed w/o Merchant name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Business_Information_from_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Business Information from QC:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Contact_Mobile_Number__c</fullName>
        <label>Confirmed Contact Mobile Number</label>
        <picklist>
            <picklistValues>
                <fullName>No Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Under Merchant Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed w/o Merchant name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Contact_Phone_Number__c</fullName>
        <label>Confirmed Contact Phone Number</label>
        <picklist>
            <picklistValues>
                <fullName>No Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Under Merchant Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed w/o Merchant name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_FRSA_Dates__c</fullName>
        <label>Confirmed FRSA Dates?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Information_From_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Information From QC:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Needs_Follow_Up_Due_Date__c</fullName>
        <label>Confirmed - Needs Follow Up Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Primary_Signer_phone_s__c</fullName>
        <label>Confirmed primary signer phone #s?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_QC_Calc_Against_Deal_Terms__c</fullName>
        <label>Confirmed QC Calc/ Against Deal Terms?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_Split_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Split in Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Westlaw_real_property_search__c</fullName>
        <label>Confirmed Westlaw real property search</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed w/No Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO Result</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_business_1_DBA__c</fullName>
        <label>Confirmed all additional bus. DBAs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_business_1_address__c</fullName>
        <label>Confirmed all additional bus. addresses?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_business_2_DBA__c</fullName>
        <label>Confirmed additional business 2 DBA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_business_2_address__c</fullName>
        <label>Confirmed additional business 2 address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_signer_e_mail__c</fullName>
        <label>Confirmed additional signer e-mail?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_signer_fax_number__c</fullName>
        <label>Confirmed additional signer fax number?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_additional_signer_phone_s__c</fullName>
        <label>Confirmed additional signer phone #s?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_bank_information__c</fullName>
        <label>Confirmed bank information with:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_business_DBA_name__c</fullName>
        <label>Confirmed business DBA name?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_business_email_address__c</fullName>
        <label>Confirmed business email address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_business_fax_number__c</fullName>
        <label>Confirmed business fax number?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_business_phone_number__c</fullName>
        <label>Confirmed business phone number?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_competitor_Payoff_Information__c</fullName>
        <label>Confirmed competitor Payoff Information</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_legal_name_in_Westlaw__c</fullName>
        <label>Confirmed legal name in Westlaw?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Web-Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable To Confirm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_primary_signer_e_mail__c</fullName>
        <label>Confirmed primary signer e-mail?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_primary_signer_fax_number__c</fullName>
        <label>Confirmed primary signer fax number?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_wire_amount_with__c</fullName>
        <label>Confirmed wire amount with:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Summary__c</fullName>
        <formula>&quot;Total Of Mortgage Trades 60 DPD:&quot;&amp; text( CRR__r.TotalOfMortgageTrades60DaysPastDue__c) &amp; BR()
&amp; &quot;Total Of Mortgage Trades 90 DPD:&quot;&amp; text( CRR__r.TotalOfMortgageTrades90DaysPastDue__c) &amp; BR()
&amp; &quot;Number Of Bankruptcies:&quot;&amp; text( CRR__r.NumberOfBankruptcies__c) &amp; BR()
&amp; &quot;Total Past Due Amount:&quot;&amp; text( CRR__r.TotalPastDueAmount__c) &amp; BR()
&amp; &quot;Oldest Open Date Of A Trade:&quot;&amp; text( CRR__r.OldestOpenDateOfATrade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Bureau Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Sales_1Month__c</fullName>
        <description>Credit Card Sales 1Month</description>
        <label>Credit Card Sales 1Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Sales_2Month__c</fullName>
        <description>Credit Card Sales 2Month</description>
        <label>Credit Card Sales 2Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Sales_3Month__c</fullName>
        <description>Credit Card Sales 3Month</description>
        <label>Credit Card Sales 3Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Sales_Last_Month__c</fullName>
        <description>Credit Card Sales Last Month</description>
        <label>Credit Card Sales Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Related_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Related Reporting</label>
        <referenceTo>Credit_Related_Reporting__c</referenceTo>
        <relationshipLabel>Opportunities (Credit Related Reporting)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Sheet__c</fullName>
        <label>Current Balance Sheet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>